# specer

./: .gitignore  ATD.md  Dockerfile  README.md  docker-compose.yml  gdd_tree.md  main.py  master_blueprint_tree.md  master_gdd.md  pyproject.toml  spec-protocol.md  spec.md  task.md
.agent/rules/: AGENTS.md
blueprints/: feature.md  master.md  milestone.md  module.md
data/: default.md  default_vc.json  default_vectors.json  test_doc_vectors.json
data/_history/default/: v0.md  v1.md  v2.md
server/: Architecture.md  Feature.md  blueprint.py  blueprints_manager.py  document_manager.py  gemini_client.py  main.py  markdown_renderer.py  ollama_client.py  vector_store.py
static/: Architecture.md  Feature.md  app.js  index.html  style.css  style.css.bak
tests/: integration_test.py  repro_test.py  test_blueprints.py  test_case.txt  test_dynamic_blueprints_e2e.py  test_flow.py  test_markdown_rendering.py  test_merge_e2e.py  test_no_llm_merge.py  test_regex_new.py  test_render_api.py  test_summary.py  test_version_control.py
tests/merge_scenarios/: __init__.py  base_document.md  fixtures.py
tests/merge_scenarios/case_1_additive/inputs/: 01_authentication.txt  02_database.txt  03_api_gateway.txt
tests/merge_scenarios/case_2_merges/inputs/: 01_notification_initial.txt  02_notification_update.txt  03_notification_final.txt
tests/merge_scenarios/case_3_complex/inputs/: 01_analytics_initial.txt  02_analytics_streaming.txt  03_milestone_mvp.txt  04_analytics_ml.txt  05_finalize.txt
