[project]
name = "specer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "numpy",
    "markdown>=3.10.2",
    "pygments>=2.19.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
